--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "meme",
   "main": "index.js",
   "private": true,
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "sanemat",
+  "license": "ISC",
+  "files": ["bin/", "lib/", "src/"]
 }
