--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "lint": "eslint \"{src,test}/**/*.ts\"",
     "start": "parcel serve src/index.html",
     "test": "echo \"It works.\" && exit 0",
     "prettier": "prettier --write \"{src,test,example}/**/*.ts\""
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.2.2",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "typescript": "^3.5.3"
