--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"{src,test}/**/*.ts\"",
+    "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url .",
     "start": "parcel serve src/index.html",
     "test": "echo \"It works.\" && exit 0",
     "prettier": "prettier --write \"{src,test,example}/**/*.ts\""
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^6.2.2",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
