--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url .",
     "start": "parcel serve src/index.html",
     "test": "echo \"It works.\" && exit 0",
+    "predeploy": "npm run build",
     "prettier": "prettier --write \"{src,test,example}/**/*.ts\""
   },
   "devDependencies": {
