--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "description": "meme",
   "version": "0.1.0",
   "author": "sanemat",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^6.2.2",
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
+  },
   "directories": {
     "lib": "lib",
     "test": "test"
@@ -16,21 +25,12 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "lint": "eslint \"{src,test}/**/*.ts\"",
     "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url .",
+    "lint": "eslint \"{src,test}/**/*.ts\"",
+    "predeploy": "npm run build",
+    "prettier": "prettier --write \"{src,test,example}/**/*.ts\"",
     "start": "parcel serve src/index.html",
     "test": "echo \"It works.\" && exit 0",
-    "predeploy": "npm run build",
-    "watch": "parcel watch src/index.html",
-    "prettier": "prettier --write \"{src,test,example}/**/*.ts\""
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.2.2",
-    "parcel-bundler": "^1.12.3",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "watch": "parcel watch src/index.html"
   }
 }
