--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/parser": "^2.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^6.2.2",
+    "firebase-tools": "^7.3.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "typescript": "^3.5.3"
