chore(circleci): deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,27 @@ jobs:
 
       - run: npm run lint
       - run: npm run test
+
+  deploy:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:latest
+
+    working_directory: ~/repo
+    steps:
+      - run:
+          name: Deploy Master to Firebase
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+
+workflows:
+  version: 2
+
+  -deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
