--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,6 @@ jobs:
 
       - run: npm run lint
       - run: npm run test
-      - persist_to_workspace:
-          root: ~/repo
-          paths:
-            - ./dist
-            - ./node_modules
 
   deploy:
     docker:
@@ -48,8 +43,16 @@ jobs:
 
     working_directory: ~/repo
     steps:
-      - attach_workspace:
-          at: ~/repo
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: npm i
       - run:
           name: Deploy Master to Firebase
           command: npm run deploy -- --token=$FIREBASE_DEPLOY_TOKEN
